# nothingpy

./: LICENSE  README.md  pyproject.toml
research/: test_code.py
src/nothingpy/: __init__.py  nothing.py
tests/: test_nothing.py
