[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "nothingpy"
version = "0.1"
authors = [
  { name="Tom Burns", email="public@llmonpy.ai" },
]
description = "A None alternative for Python that reduces the need for None checks."
readme = "README.md"
requires-python = ">=3.4"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/llmonpy/nothingpy"
Issues = "https://github.com/llmonpy/nothingpy/issues"